--- a/compose.yml
+++ b/compose.yml
@@ -6,4 +6,4 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./data_out/:/app/data_out/
-    command: python3 test_system.py
+    command: python3 run_experiment.py
